docs/api/qiskit-ibm-runtime/0.49/options-sampler-options.mdx
---
title: SamplerOptions (v0.49)
description: API reference for qiskit_ibm_runtime.options.SamplerOptions in qiskit-ibm-runtime v0.49
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.SamplerOptions
---

# SamplerOptions

<Class id="qiskit_ibm_runtime.options.SamplerOptions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.49/qiskit_ibm_runtime/options/sampler_options.py#L24-L55" signature="SamplerOptions(_VERSION=2, max_execution_time=Unset, environment=<factory>, simulator=<factory>, default_shots=Unset, dynamical_decoupling=<factory>, execution=<factory>, twirling=<factory>, experimental=Unset)" modifiers="class">
  Bases: `OptionsV2`

  Options for V2 Sampler.

  ## Attributes

  **Parameters**

  *   **\_VERSION** (*int*)
  *   **max\_execution\_time** (*UnsetType | int*)
  *   **environment** ([*EnvironmentOptions*](options-environment-options "qiskit_ibm_runtime.options.environment_options.EnvironmentOptions") *| Dict*)
  *   **simulator** ([*SimulatorOptions*](options-simulator-options "qiskit_ibm_runtime.options.simulator_options.SimulatorOptions") *| Dict*)
  *   **default\_shots** (*UnsetType | int*)
  *   **dynamical\_decoupling** ([*DynamicalDecouplingOptions*](options-dynamical-decoupling-options "qiskit_ibm_runtime.options.dynamical_decoupling_options.DynamicalDecouplingOptions") *| Dict*)
  *   **execution** ([*SamplerExecutionOptionsV2*](options-sampler-execution-options-v2 "qiskit_ibm_runtime.options.sampler_execution_options.SamplerExecutionOptionsV2") *| Dict*)
  *   **twirling** ([*TwirlingOptions*](options-twirling-options "qiskit_ibm_runtime.options.twirling_options.TwirlingOptions") *| Dict*)
  *   **experimental** (*UnsetType | dict*)

  ### default\_shots

  <Attribute id="qiskit_ibm_runtime.options.SamplerOptions.default_shots">
    Type: `UnsetType` | `int`

    Default value: `Unset`

    The default number of shots to use if none are specified in the PUBs or in the run method.

    Default: 4096.
  </Attribute>

  ### dynamical\_decoupling

  <Attribute id="qiskit_ibm_runtime.options.SamplerOptions.dynamical_decoupling">
    Type: [`DynamicalDecouplingOptions`](options-dynamical-decoupling-options "qiskit_ibm_runtime.options.dynamical_decoupling_options.DynamicalDecouplingOptions") | `Dict`

    Default value: `FieldInfo(annotation=NoneType, required=False, default_factory=DynamicalDecouplingOptions)`

    Suboptions for dynamical decoupling. See [`DynamicalDecouplingOptions`](options-dynamical-decoupling-options "qiskit_ibm_runtime.options.DynamicalDecouplingOptions") for all available options.
  </Attribute>

  ### environment

  <Attribute id="qiskit_ibm_runtime.options.SamplerOptions.environment">
    Type: [`EnvironmentOptions`](options-environment-options "qiskit_ibm_runtime.options.EnvironmentOptions") | `Dict`

    Default value: `FieldInfo(annotation=NoneType, required=False, default_factory=EnvironmentOptions)`
  </Attribute>

  ### execution

  <Attribute id="qiskit_ibm_runtime.options.SamplerOptions.execution">
    Type: [`SamplerExecutionOptionsV2`](options-sampler-execution-options-v2 "qiskit_ibm_runtime.options.sampler_execution_options.SamplerExecutionOptionsV2") | `Dict`

    Default value: `FieldInfo(annotation=NoneType, required=False, default_factory=SamplerExecutionOptionsV2)`

    Execution time options.

    See [`SamplerExecutionOptionsV2`](options-sampler-execution-options-v2 "qiskit_ibm_runtime.options.SamplerExecutionOptionsV2") for all available options.
  </Attribute>

  ### experimental

  <Attribute id="qiskit_ibm_runtime.options.SamplerOptions.experimental">
    Type: `UnsetType` | `dict`

    Default value: `Unset`

    Experimental options.
  </Attribute>

  ### max\_execution\_time

  <Attribute id="qiskit_ibm_runtime.options.SamplerOptions.max_execution_time">
    Type: `UnsetType` | `int`

    Default value: `Unset`
  </Attribute>

  ### simulator

  <Attribute id="qiskit_ibm_runtime.options.SamplerOptions.simulator">
    Type: [`SimulatorOptions`](options-simulator-options "qiskit_ibm_runtime.options.SimulatorOptions") | `Dict`

    Default value: `FieldInfo(annotation=NoneType, required=False, default_factory=SimulatorOptions)`
  </Attribute>

  ### twirling

  <Attribute id="qiskit_ibm_runtime.options.SamplerOptions.twirling">
    Type: [`TwirlingOptions`](options-twirling-options "qiskit_ibm_runtime.options.twirling_options.TwirlingOptions") | `Dict`

    Default value: `FieldInfo(annotation=NoneType, required=False, default_factory=TwirlingOptions)`

    Pauli twirling options.

    See [`TwirlingOptions`](options-twirling-options "qiskit_ibm_runtime.options.TwirlingOptions") for all available options.
  </Attribute>

  ## Methods

  ### update

  <Function id="qiskit_ibm_runtime.options.SamplerOptions.update" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.49/qiskit_ibm_runtime/options/options.py#L147-L156" signature="update(**kwargs)">
    Update the options.

    **Parameters**

    **kwargs** (*Any*)

    **Return type**

    None
  </Function>
</Class>

